Restore themed menu in 3.2 ensure OSD popups match the theme ensure vertical panel applet spacing is sensible

--- a/Serena/files/Serena/cinnamon/cinnamon.css
+++ b/Serena/files/Serena/cinnamon/cinnamon.css
@@ -88,6 +88,20 @@ border-radius: 3px;
 	font-size: 9pt;
     min-width: 66px;
 }
+.menu {
+    border: 1px  #403f42;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 0px;
+    background-gradient-direction: vertical;
+    background-gradient-start: #282729;
+    background-gradient-end: #1b1b1c;
+    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.86);
+    border-radius: 11px 11px 11px 11px;
+    color: #eee;
+    font-size: 9pt;
+    min-width: 66px;
+}
 .popup-sub-menu .popup-menu-item:ltr {
 	padding-right: 0em;
 }
@@ -1757,8 +1771,13 @@ border-color: rgba(2,2,2,0.001);
    	background-gradient-start: rgba(70,70,70,1);
     	background-gradient-end: rgba(30,30,30,1);
 }
+.applet-box.vertical {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
 .applet-label {	
-
 	color: #fff;		
 }
 .applet-label:hover,
@@ -1953,4 +1972,50 @@ border-radius: 0px;
    padding-top: 4px;
    font-size: 0.9em;
    box-shadow: none;
+}
+
+.flashspot {
+background-color: white;
+}
+
+
+/* Media keys OSD popup */
+.osd-window {
+    border: 1px  #403f42;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 0px;
+    background-gradient-direction: vertical;
+    background-gradient-start: #282729;
+    background-gradient-end: #1b1b1c;
+    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.86);
+    border-radius: 11px;
+    padding: 20px;
+    color: white;
+    spacing: 1em;
+}
+
+.osd-window .level {
+    height: 0.7em;
+    border-radius: 0.3em;
+    background-color: rgba(190,190,190,0.2);
+}
+/* Info OSD popup */
+.info-osd {
+    border: 1px  #403f42;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 0px;
+    background-gradient-direction: vertical;
+    background-gradient-start: #282729;
+    background-gradient-end: #1b1b1c;
+    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.86);
+    border-radius: 11px;
+    color: white;
+    font-size: 16pt;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
 }
